<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="15dp"
    android:background="@color/cardview_dark_background">

    <RelativeLayout
        android:id="@+id/msgPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_200"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/switchButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"

            android:minHeight="50dp"
            android:text="@string/defaultMessage" />


        <ImageButton
            android:id="@+id/switchButton"
            android:layout_width="20dp"
            android:layout_height="20dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/switchButtonDesc" />
        <!-- android:src="@mipmap/coonpic" -->
    </RelativeLayout>
    <EditText
        android:id="@+id/inputBlank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msgPicker"
        android:background="@color/white" />
    <RelativeLayout
        android:id="@+id/btnAndLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBlank"
        android:background="@color/purple_200">
        <RadioGroup
            android:id="@+id/pickLangGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/btnCoon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coonLangBtn"/>
            <RadioButton
                android:id="@+id/btnOneUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ltrUpBtn"/>
            <RadioButton
                android:id="@+id/btnCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catLangBtn"/>
        </RadioGroup>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/pickLangGroup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/pickLangLabel" />
        </FrameLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAndLbl"
        android:background="@color/white"
        android:text="@string/defaultTxtMsg"/>
</androidx.constraintlayout.widget.ConstraintLayout>